--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.1258.0",
     "express": "^4.17.3",
     "sirv-cli": "^2.0.0"
   }
