--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1258.0",
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "sirv-cli": "^2.0.0"
   }
