--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "nodemon": "^2.0.16",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -20,6 +21,9 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1258.0",
+    "axios": "^1.1.3",
+    "cors": "^2.8.5",
+    "cyclic-dynamodb": "^0.0.21",
     "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "sirv-cli": "^2.0.0"
